.provarCaches/00D5f000005vwGkEAI/objects/rstk__customext__c.object
<CustomObject>
    <description>customext__c</description>
    <fields>
        <fullName>rstk__Date__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__Id_Collection__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Id Collection</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__RecordstoDisplay__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Number of Records to Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__abcclass__c</fullName>
        <inlineHelpText>The ABC classification that you wish to generate Inventory Reconciliation records for.  Valid values are &apos;A&apos;, &apos;B&apos; or &apos;C&apos;.</inlineHelpText>
        <label>ABC Class</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__accounting_txn_date__c</fullName>
        <inlineHelpText>Accounting Transaction Date</inlineHelpText>
        <label>Accounting Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_cronExpression__c</fullName>
        <description>allocQty_cronExpression__c</description>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>allocQty_division__c</description>
        <inlineHelpText>Division is set to the Current Division set on your Mfg User and cannot be changed directly. To create / access a record in another Division or Company, use Quick Menu option to “Change Company/Division” or update the Current Div on your Mfg User record.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Custom Extensions (Division Master)</relationshipLabel>
        <relationshipName>allocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>allocQty_item__c</description>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Custom Extensions (Item)</relationshipLabel>
        <relationshipName>allocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>allocQty_project__c</description>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Custom Extensions (Project)</relationshipLabel>
        <relationshipName>allocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_repair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allocQty_repair__c</description>
        <label>Repair Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_schedulename__c</fullName>
        <description>allocQty_schedule _name__c</description>
        <label>Schedule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_sheduleRepair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>allocQty_sheduleRepair__c</description>
        <label>Repair Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__allocQty_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>allocQty_site__c</description>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Custom Extensions (Site Master)</relationshipLabel>
        <relationshipName>allocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__apamountmcurr__c</fullName>
        <label>AP Entry&lt;br/&gt;Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__apqty__c</fullName>
        <label>AP Entry&lt;br/&gt;Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__apunitpricemcurr__c</fullName>
        <label>AP Entry&lt;br/&gt;Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__apwht__c</fullName>
        <label>Withholding Tax Class</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bankcardaccountid__c</fullName>
        <label>Bank Card Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__batchno__c</fullName>
        <inlineHelpText>System-generated batch number.</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ccreport_class__c</fullName>
        <inlineHelpText>Select the desired ABC Class from the &apos;Available&apos; box and click the arrow pointing to the right to move it to the &apos;Chosen&apos; box.  More than on ABC Class may be selected.</inlineHelpText>
        <label>ABC Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class A</fullName>
                    <default>true</default>
                    <label>Class A</label>
                </value>
                <value>
                    <fullName>Class B</fullName>
                </value>
                <value>
                    <fullName>Class C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ccreport_sortoption__c</fullName>
        <inlineHelpText>Select the desired Sort Option. Options are

Sort by Oldest Date &amp; then Item
Sort by Cost &amp; then Item
Sort by ABC &amp; then Cost &amp; the Item
Sort by Location ID &amp; then Location Number
Sort by Item &amp; then Location ID &amp; then Location Number</inlineHelpText>
        <label>Sort Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sort by Oldest Date and then Item</fullName>
                    <default>true</default>
                    <label>Sort by Oldest Date and then Item</label>
                </value>
                <value>
                    <fullName>Sort by Cost and then Item</fullName>
                </value>
                <value>
                    <fullName>Sort by ABC and then Cost and then Item</fullName>
                </value>
                <value>
                    <fullName>Sort by Location ID and then Location Number</fullName>
                </value>
                <value>
                    <fullName>Sort by Item and then Location ID and then Location Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__clockoff_user__c</fullName>
        <label>Clock Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__clockon_user__c</fullName>
        <label>Clock Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__comment2__c</fullName>
        <label>Comment2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__conversion_mode__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Conversion Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item Number</fullName>
                </value>
                <value>
                    <fullName>Primary Vendor</fullName>
                </value>
                <value>
                    <fullName>Assigned Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__custom_checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__custom_checkbox3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Custom Checkbox3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__custom_checkbox4__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>custom checkbox4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__custom_currency__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Currency</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__custom_date2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__custom_date3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__custom_date4__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__custom_number__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Custom Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__custom_returntopo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Return to PO Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__custom_textarea__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>custom textarea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__custom_workorder1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order 1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custom_workorder2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__customext_poconctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation Center</label>
        <referenceTo>rstk__poconctr__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Customer Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socontract2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>zzz Sales Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Custom Extensions (Sales Customer)</relationshipLabel>
        <relationshipName>customexts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socontract3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Contract Master 3</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Custom Extensions (Contract Master 3)</relationshipLabel>
        <relationshipName>customexts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socontract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socust2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Sales Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Custom Extensions (Sales Customer)</relationshipLabel>
        <relationshipName>customexts_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__customext_socust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__dealmgt_activity__c</fullName>
        <label>Activity to Perform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-Select-</fullName>
                </value>
                <value>
                    <fullName>Define Interim Hold Dates</fullName>
                </value>
                <value>
                    <fullName>Clear Interim Hold Dates</fullName>
                </value>
                <value>
                    <fullName>Place on Billing Hold</fullName>
                </value>
                <value>
                    <fullName>Remove from Billing Hold</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Reactivate from Terminated</fullName>
                </value>
                <value>
                    <fullName>Transfer to Another Contract</fullName>
                </value>
                <value>
                    <fullName>Update Asset ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Division is set to the Current Division set on your Mfg User and cannot be changed directly. To create / access a record in another Division or Company, use Quick Menu option to “Change Company/Division” or update the Current Div on your Mfg User record.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__dowht__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WHT Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__endofday_clockoffall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Off All Existing Open Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__endofday_user__c</fullName>
        <label>Clock Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__endoflunchbreak_user__c</fullName>
        <label>Clock Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__exchange_rate__c</fullName>
        <inlineHelpText>Exchange Rate</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__exchange_rate_schedule__c</fullName>
        <inlineHelpText>Type of Exchange Rate Schedule</inlineHelpText>
        <label>Type of Exchange Rate Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Locked-In Commitment Rate</fullName>
                </value>
                <value>
                    <fullName>Override Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_dailybucketqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_dailybucketqty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_deleteall__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Delete All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_deleteenddte__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_deletestrtdte__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_mode__c</fullName>
        <inlineHelpText>Select the mode you wish to execute from picklist (dropdown).  Options are

Generate forecast entries
Delete forecast entries</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate forecast entries</fullName>
                    <default>true</default>
                    <label>Generate forecast entries</label>
                </value>
                <value>
                    <fullName>Delete forecast entries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_monthlybucketqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_monthlybucketqty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_new__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this will be a new run and not an add or change to an existing run.</inlineHelpText>
        <label>New Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numberofperiods__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Number of Periods</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numberofrows__c</fullName>
        <inlineHelpText>This defines how many rows will display below when clicking on the &apos;Load Grid&apos; button.  Default value is 10.  Value must be a whole number.</inlineHelpText>
        <label>Number of Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numdailybuckets__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_numdailybuckets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_nummonthlybuckets__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_nummonthlybuckets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numquarterlybuckets__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_numquarterlybuckets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numweeklybuckets__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_numweeklybuckets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_numyearlybuckets__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_numyearlybuckets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_periodqty__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Period Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_periodtype__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project for which forecast demand records will be added for in this run.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_quarterlybucketqty__c</fullName>
        <inlineHelpText>Forecast Entry Quarterly Bucket Quantity</inlineHelpText>
        <label>fcstentry_quarterlybucketqty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_runno2__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Run No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_runno__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Run No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_startingdate__c</fullName>
        <inlineHelpText>This will be used as the starting date for the first forecast period for this run.</inlineHelpText>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_status__c</fullName>
        <inlineHelpText>Select the desired status.  Options are 

1-Planned (MRP will not consider)
2-Firm (Will be planned by MRP)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Planned</fullName>
                </value>
                <value>
                    <fullName>2-Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_weeklybucketqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_weeklybucketqty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fcstentry_yearlybucketqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fcstentry_yearlybucketqty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fromitemNum__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>From Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__frst_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_billrundate__c</fullName>
        <inlineHelpText>Enter the date that will be used as the “as-of” date; default is TODAY</inlineHelpText>
        <label>Billing Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_contracttype__c</fullName>
        <inlineHelpText>Can optionally choose to run by Contract Type.  Options are

Purchase
Flexi
Value Plan
Lease	

Note that the picklist values for Contract Type can be modified by users to reflect more meaningful values to users.</inlineHelpText>
        <label>Contract Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_cronexpr__c</fullName>
        <inlineHelpText>This is used to define the schedule parameters when setting up a billing schedule to run automatically.  Values to be provided are [Seconds][Minutes][Hours][Day of Month][Month][Day of Week][Optional Year], defining when the schedule job is to run.</inlineHelpText>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optionally select a Customer, which, if used, will filter the ‘Contract’ fields dropdown by the Customer selected.  If a specific Contract is not specified, billings will be done for all Contracts for the Customer selected.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Custom Extensions (Customer)</relationshipLabel>
        <relationshipName>customextsForGenrecbill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_periodicbillingfreq__c</fullName>
        <inlineHelpText>Select the frequency desired; default = ‘All’ - billings will be processed regardless of billing frequency for a given Contract (though billings will only be generated that are due to be billed). Options are

All
Monthly
Quarterly
Semi-Annual
Annual</inlineHelpText>
        <label>Periodic Billing Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_runforalldivs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Normally billings will be generated for only those Contracts within the current Sales Division of user running the billing engine. When checked, billings will be done against all Sales Divisions (if there is more than 1 Sales Division) in a given company.</inlineHelpText>
        <label>Run for All Divisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_salesdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales Division</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Custom Extensions (Sales Division)</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_schedname__c</fullName>
        <inlineHelpText>If the desire is to schedule a billing run on a regular interval, this is the name that will appear in the Scheduled Job queue</inlineHelpText>
        <label>Schedule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__genrecbill_socontract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a Customer is selected an the billing is to be done for only a specific Contract for that Customer, select the Contract for which billing is to be done.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Custom Extensions (Contract)</relationshipLabel>
        <relationshipName>customextsForGenrecbill</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iarforecastdemand__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Forecast Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarposupply__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>PO Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarpurchaserequisitionsupply__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Purchase Requisition Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarrepairbadmissingindexes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Repair Bad/Missing Indexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarsalesorderdemand__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Sales Order Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarsubcontractpodemand__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Subcontract PO Demand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarwodemand__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>WODemand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iarworkordersupply__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Work Order Supply</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>